# todo_for_student

./: README.md  docker-compose.yml  pyproject.toml  tasks.py  test_tasks.py
app/: .dockerignore  .gitignore  Dockerfile  main.py  pyproject.toml  schemas.py  tasks.py  test_tasks.py
app/tests/: conftest.py  test_tasks.py  tests_task
app/tests/api/: conftest.py  test_tasks.py  utils.py
app/tests/unit/: conftest.py  test_tasks.py
task-manager-frontend/: .dockerignore  README.md  package-lock.json  package.json
task-manager-frontend/src/: App.vue  main.js
task-manager-frontend/src/assets/css/: base.css  components.css  utilities.css
task-manager-frontend/src/components/: StatsCard.vue  TaskForm.vue  TaskItem.vue  TaskList.vue
task-manager-frontend/src/composables/: useTasks.js
task-manager-frontend/src/services/: api.js
