[project]
name = "todo-for-student"
version = "0.1.0"
description = ""
authors = [
    {name = "John Makarov",email = "johnmakarovqa@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi (>=0.117.1,<0.118.0)",
    "uvicorn (>=0.37.0,<0.38.0)",
    "ruff (>=0.13.2,<0.14.0)",
    "pytest (>=8.4.2,<9.0.0)",
    "faker (>=37.11.0,<38.0.0)",
    "mypy (>=1.18.2,<2.0.0)",
    "requests (>=2.32.5,<3.0.0)",
    "allure-pytest (>=2.15.0,<3.0.0)",
]

[tool.pytest.ini_options]
addopts = [
    "--log-date-format=%Y-%m-%d %H:%M:%S",
    "--log-format=%(asctime)s %(levelname)s %(message)s", 
    "--log-cli-level=INFO", 
    "--alluredir=allure-results",
    "--clean-alluredir"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

